@@ -9,7 +9,6 @@ attlist.tree &=
 attlist.tree &= attribute on_write { text }?
 attlist.tree &= attribute editable { "top" | "bottom" }?
 attlist.tree &= attribute sequence { text }?
-attlist.tree &= attribute colors { text }?
 attlist.tree &=
   [ a:defaultValue = "0" ] attribute keyword_open { "0" | "1" }?
 attlist.tree &=
